--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 
 </div>
 <div id="root" class="root"></div>
-<script src="/dist/assets/bundle.js"></script>
+<script src="/book-catalog/dist/assets/bundle.js"></script>
 </body>
 </html>
